--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,18 +1,15 @@
 body {
-	margin: 0;
+   margin: 0;
+   padding: 0;
 	font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
 		'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
-   color: #eee;
-}
-
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .Main {
-   height: 100vh;
    background-color: #222;
    display: flex;
+   min-height: 100vh;
+   color: #eee;
 }
