--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,3 +1,4 @@
+
 body {
    margin: 0;
    padding: 0;
@@ -5,11 +6,15 @@ body {
 		'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
+   height: 100%;
 }
 
 .Main {
    background-color: #222;
    display: flex;
-   min-height: 100vh;
+   // min-height: 100vh;
+   height: 100%;
+   max-width: 100%;
    color: #eee;
+   position: relative;
 }
