--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,20 +1,27 @@
-
-body {
-   margin: 0;
-   padding: 0;
-	font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-		'Droid Sans', 'Helvetica Neue', sans-serif;
-	-webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
-   height: 100%;
+html {
+	::-webkit-scrollbar {
+		width: 8px;
+	}
+	::-webkit-scrollbar-track {
+      background: #ddd;
+	}
+	::-webkit-scrollbar-thumb {
+		background: #333;
+	}
+	::-webkit-scrollbar-thumb:hover {
+		background: #222;
+	}
 }
-
+body {
+	margin: 0;
+	padding: 0;
+}
 .Main {
-   background-color: #222;
-   display: flex;
-   // min-height: 100vh;
-   height: 100%;
-   max-width: 100%;
-   color: #eee;
-   position: relative;
+	background-color: #222;
+	display: flex;
+	// min-height: 100vh;
+	height: 100%;
+	max-width: 100%;
+	color: #eee;
+	position: relative;
 }
